<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg">

        <RelativeLayout
            android:id="@+id/ll_short_time_text"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:src="@drawable/duanshiyubao"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/jue_short_time"
                android:textColor="@color/juece_font"
                android:textSize="30sp"/>
        </RelativeLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_below="@+id/ll_short_time_text"
            android:layout_marginTop="30dp"
            android:background="@color/gray_line"/>

        <TextView
            android:id="@+id/juce_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/view1"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/juecefuwu"
            android:gravity="center_vertical"
            android:text="@string/jue_cai_liao"
            android:textColor="@color/juece_font"
            android:textSize="19sp"/>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_below="@+id/juce_txt"
            android:background="@color/gray_line"/>

        <TextView
            android:id="@+id/jingxihua_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/view2"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/jingxihua"
            android:gravity="center_vertical"
            android:text="@string/jue_jing_hua"
            android:textColor="@color/juece_font"
            android:textSize="19sp"/>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_below="@+id/jingxihua_txt"
            android:background="@color/gray_line"/>

        <TextView
            android:id="@+id/nongqiyubao_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/view3"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/nongqi"
            android:gravity="center_vertical"
            android:text="@string/jue_nong_qi"
            android:textColor="@color/juece_font"
            android:textSize="19sp"/>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_below="@+id/nongqiyubao_txt"
            android:background="@color/gray_line"/>

        <View
            android:id="@+id/view5"
            android:layout_width="0.1dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/view4"
            android:layout_alignTop="@+id/view1"
            android:layout_centerHorizontal="true"
            android:background="@color/gray_line"/>

        <TextView
            android:id="@+id/duanqi_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/juce_txt"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@+id/view5"
            android:drawableLeft="@drawable/duanqiwenzi"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:text="@string/jue_short_period"
            android:textColor="@color/juece_font"
            android:textSize="19sp"/>

        <TextView
            android:id="@+id/xunyubao_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/jingxihua_txt"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/view5"
            android:drawableLeft="@drawable/xun"
            android:gravity="center_vertical"
            android:text="@string/jue_xun"
            android:textColor="@color/juece_font"
            android:textSize="19sp"/>

        <TextView
            android:id="@+id/qita_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/nongqiyubao_txt"
            android:layout_margin="9dp"
            android:layout_toRightOf="@+id/view5"
            android:drawableLeft="@drawable/qita"
            android:gravity="center_vertical"
            android:text="@string/jue_other"
            android:textColor="@color/juece_font"
            android:textSize="19sp"/>
    </RelativeLayout>
</LinearLayout>