<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg"
              android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:src="@drawable/yy"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:text="吉林省交通气象手机客户端"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/yonghuming"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/yonghuming"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="用户名"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="22sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/gray_line"
        />

    <EditText
        android:id="@+id/mima"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/mima_two"
        android:drawablePadding="17dp"
        android:ems="10"
        android:hint="@string/xiugaimim_mim"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="22sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/gray_line"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <com.rey.material.widget.CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="2dp"
            android:checked="false"
            android:imeOptions="actionDone"
            app:cbd_animDuration="@android:integer/config_mediumAnimTime"
            app:cbd_boxSize="20dp"
            app:cbd_cornerRadius="2dp"
            app:cbd_height="32dp"
            app:cbd_strokeColor="@color/red"
            app:cbd_strokeSize="2dp"
            app:cbd_width="32dp"
            app:di_cornerRadius="2dp"
            app:di_dimAmount="0.5"
            app:di_elevation="4dp"
            app:di_layoutDirection="locale"
            app:di_maxElevation="4dp"/>

        <TextView
            android:id="@+id/save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/save_password"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/denglu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_login_queren"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/zhuce"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login_go_zhuce"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="25sp"/>
</LinearLayout>